fix: add gradient to progress bar and fix error state spacing
- Added linear gradient to progress circle (from #87189D to #B366BD)
- Fixed error state to use same spacing as other states
- Error state now uses the status section with consistent styling
- Added gradient end color to design system variables
- Removed unused error-text styles

--- a/src/components/organisms/RewardsDial/RewardsDial.module.scss
+++ b/src/components/organisms/RewardsDial/RewardsDial.module.scss
@@ -114,13 +114,4 @@
   &__conversion-points {
     font-weight: 900; // Black weight
   }
-  
-  &__error-text {
-    font-family: $font-family-sofia;
-    font-size: $rewards-dial-status-size;
-    font-weight: $font-weight-semibold;
-    color: $black;
-    text-align: center;
-    line-height: normal;
-  }
 }
