--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -493,3 +493,4 @@ $rewards-dial-dollar-sign-size: 32px; // Dollar sign size (from Figma)
 $rewards-dial-dollar-amount-size: 64px; // Dollar amount size (from Figma)
 $rewards-dial-inner-shadow: 0px -4px 8px 0px inset rgba(0, 0, 0, 0.1), 0px 4px 8px 0px inset rgba(0, 0, 0, 0.1); // Dial inner shadow (from Figma)
 $rewards-dial-conversion-letter-spacing: -1px; // Letter spacing for conversion text (from Figma)
+$rewards-dial-gradient-end: #B366BD; // Gradient end color for progress (from Figma)
